Overlapping of LGSGames Fixed

--- a/styles/LGSGames.module.css
+++ b/styles/LGSGames.module.css
@@ -1,10 +1,9 @@
 .lgsgames{
-    position: relative;
     width: 100%;
     height: 50vh;
     background-color: #050d22;
     color: white;
-    z-index: 10;
+    backdrop-filter: blur(1px);
     display: flex;
     flex-direction: column;
     justify-content: center;
